language/move-lang/tests/move_check/naming/standalone_module_ident.exp
error: 

   ┌── tests/move_check/naming/standalone_module_ident.move:9:23 ───
   │
 9 │         let x = 0x1::X;
   │                       - Expected '::'
   │                       ^ Unexpected ';'
   │

